# game.libretro.vba-next

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/vba-next/: CMakeLists.txt  vba-next.txt
game.libretro.vba-next/: addon.xml  addon.xml.in  changelog.txt
game.libretro.vba-next/resources/: buttonmap.xml  settings.xml
game.libretro.vba-next/resources/language/English/: strings.po
gameclient.vba-next/: addon.xml
